chore(package.json): added husky

--- a/package.json
+++ b/package.json
@@ -9,6 +9,12 @@
     "test": "jest",
     "lint": "eslint ."
   },
+  "husky": {
+    "hooks": {
+      "pre-commit": "npm run lint",
+      "pre-push": "npm run test"
+    }
+  },
   "repository": {
     "type": "git",
     "url": "git+https://github.com/wbkd/webpack-starter.git"
